# cats-breeding-simulator

./: .gitignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.artifacts/: pipeline-state.md
.artifacts/phase-1/: market-validation.md  positioning-onepager.md
.github/workflows/: ci.yml  deploy.yml
cat_breeding_simulator/: __init__.py  api.py  breed_color_policy.py  color_master.py  color_reading_ja.py  display_alias_map.py  engine.py  feedback.py  litter_inference.py  master_data.py  mendelian.py  phenotype_naming.py  reverse_lookup.py
docs/architecture/: 01_シミュレーター正本_V9.md  02_データ正本_V9.md  03_運用正本_V9.md  04_座位マスタ_V9.md  cat_breed_color_policy.csv  cat_breed_genetic_map.csv  cat_color_display_alias_map.csv  cat_color_genetic_map.csv  cat_color_master.csv  cat_color_master_review.md  cat_color_master_schema.md  提案_条件付き表示と品種色名モデル.md  (+1 more)
frontend/: .env.example  .env.production  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
scripts/: README.md  build_cat_color_display_alias_map.py  build_cat_color_master.py
tests/: test_breed_coat_colors.py  test_breeds_api.py  test_calculator_api.py  test_colors_api.py  test_cross_130_204_output_validity.py  test_cross_loci_mapping.py  test_csv_fail_fast.py  test_feedback.py  test_golden_crosses.py  test_litter_inference_api.py  test_mendelian_loci.py  test_mode_carrier_calculation.py  test_parent_color_notes.py  test_phenotype_naming.py  test_reverse_lookup_api.py  test_roundtrip_consistency.py
(+67 files in other folders)
