[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cats-breeding-simulator"
version = "0.1.0"
description = "FastAPI kitten coat color probability calculator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1",
]

[tool.setuptools.packages.find]
include = ["cat_breeding_simulator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# リポジトリ直下を import パスに追加し、`pytest` 単体 (PYTHONPATH 未設定) でも
# main / cat_breeding_simulator を解決できるようにする (CI と同条件)。
pythonpath = ["."]
